[gd_scene load_steps=3 format=3 uid="uid://dv6o6hsy0av1k"]

[ext_resource type="Script" path="res://Maumau/suit_selector.gd" id="1_script"]
[ext_resource type="StyleBox" uid="uid://bgstyle_shared" path="res://Maumau/panel_bg.tres" id="2_bg"] 

[node name="SuitSelector" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
text = "Select a Suit:"
horizontal_alignment = 1

[node name="Grid" type="GridContainer" parent="VBox"]
layout_mode = 2
columns = 2
size_flags_vertical = 3

[node name="Club" type="Button" parent="VBox/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Clubs"

[node name="Diamond" type="Button" parent="VBox/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Diamonds"

[node name="Heart" type="Button" parent="VBox/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Hearts"

[node name="Spade" type="Button" parent="VBox/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Spades"

[connection signal="pressed" from="VBox/Grid/Club" to="." method="_on_club_pressed"]
[connection signal="pressed" from="VBox/Grid/Diamond" to="." method="_on_diamond_pressed"]
[connection signal="pressed" from="VBox/Grid/Heart" to="." method="_on_heart_pressed"]
[connection signal="pressed" from="VBox/Grid/Spade" to="." method="_on_spade_pressed"]
